fix button spacing

--- a/styles.scss
+++ b/styles.scss
@@ -1081,8 +1081,8 @@ nav li:nth-last-of-type(1) {
     justify-content: space-between;
 
     &:nth-child(2) {
-      background: rgb(250, 225, 225);
       padding: 30px;
+      margin-top: 40px;
 
       @media screen and (max-width: 768px) {
         flex-direction: column;
@@ -1108,7 +1108,6 @@ nav li:nth-last-of-type(1) {
     border-radius: 50px;
     background: #afe0c2;
     color: white;
-    padding: 15px 40px;
     font-size: 22px;
   }
 
